<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/market_order_entry_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/market_order_fulfilled" />

    <TextView
        android:id="@+id/market_order_entry_expires"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/market_order_entry_volume"
        android:text="@string/market_order_expires" />

    <CheckBox
        android:id="@+id/market_order_entry_watch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/market_order_entry_expires"
        android:layout_alignParentRight="true"
        android:focusable="false" />

    <TextView
        android:id="@+id/market_order_entry_watch_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/market_order_entry_watch"
        android:layout_toLeftOf="@+id/market_order_entry_watch"
        android:text="@string/market_order_watch" />

</RelativeLayout>